Relax/Push Pose operator not working on quaternion rotation #92043

Closed
opened 2021-10-08 13:24:33 +02:00 by Ivan Cappiello · 11 comments
Member

System Information
Operating system: macOS-11.6-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 555 OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.6.20

Blender Version
Broken: version: 2.93.4, branch: master, commit date: 2021-08-31 09:23, hash: b7205031ce
Worked: N.A.

Short description of error
Relax/Push Pose operator not working on quaternion rotation

Exact steps for others to reproduce the error
• Open the attached blend file
• go to frame 15
• with both bones selected press alt+e (pose>In_Betweens>Relax Pose to Breakdown)

Euler bone will relax pose rotation and location, whilst Quaternion bone will ignore pose relax on rotation

relax_pose_quat_issue.blend

**System Information** Operating system: macOS-11.6-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 555 OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.6.20 **Blender Version** Broken: version: 2.93.4, branch: master, commit date: 2021-08-31 09:23, hash: `b7205031ce` Worked: N.A. **Short description of error** Relax/Push Pose operator not working on quaternion rotation **Exact steps for others to reproduce the error** • Open the attached blend file • go to frame 15 • with both bones selected press alt+e (pose>In_Betweens>Relax Pose to Breakdown) Euler bone will relax pose rotation and location, whilst Quaternion bone will ignore pose relax on rotation [relax_pose_quat_issue.blend](https://archive.blender.org/developer/F10875956/relax_pose_quat_issue.blend)
Author
Member

Added subscriber: @icappiello

Added subscriber: @icappiello
Author
Member

Added subscribers: @angavrilov, @dr.sybren

Added subscribers: @angavrilov, @dr.sybren
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Same for Push.

Same for Push.
Philipp Oeser changed title from Relax Pose operator not working on quaternion rotation to Relax/Push Pose operator not working on quaternion rotation 2021-10-14 12:39:21 +02:00

This issue was referenced by fb762eedbe

This issue was referenced by fb762eedbe85515b6f61138f32e36eddaab24960

This issue was referenced by abab16f7c7

This issue was referenced by abab16f7c7fd4ef9abbb27ffbcdc67239df25b25
Alexander Gavrilov self-assigned this 2021-10-29 14:18:30 +02:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author
Member

@angavrilov, isn’t this backported in 2.93.6?

@angavrilov, isn’t this backported in 2.93.6?
Member

In #92043#1264124, @icappiello wrote:
@angavrilov, isn’t this backported in 2.93.6?

Nope, I added it to 2.93.7 if @angavrilov has no objections? #88449 (Blender LTS: Maintenance Task 2.93)

> In #92043#1264124, @icappiello wrote: > @angavrilov, isn’t this backported in 2.93.6? Nope, I added it to 2.93.7 if @angavrilov has no objections? #88449 (Blender LTS: Maintenance Task 2.93)
Author
Member

@lichtwerk please do. It’s a really needed fix which if unavailable makes relax and push pose operators useless while animating quaternions. Can’t see a reason not having in an lts version.

@lichtwerk please do. It’s a really needed fix which if unavailable makes relax and push pose operators useless while animating quaternions. Can’t see a reason not having in an lts version.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92043
No description provided.